# ia-ch

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CHECKLIST-RELEASE.txt  CMakeLists.txt  README.md  build-debug.sh  build-release-windows-cross-compile.sh  build-release.sh  build-test.sh  clang-format.sh  clang-tidy.sh  cppcheck.sh  run-bot.sh  run-debug.sh  run-test.sh  valgrind.sh
include/: ability_values.hpp  actor.hpp  actor_act.hpp  actor_data.hpp  actor_death.hpp  actor_factory.hpp  actor_hit.hpp  actor_items.hpp  actor_mon.hpp  actor_move.hpp  actor_player.hpp  actor_see.hpp  actor_sneak.hpp  actor_start_turn.hpp  actor_std_turn.hpp  ai.hpp  array2.hpp  attack.hpp  attack_data.hpp  audio.hpp  audio_data.hpp  bot.hpp  browser.hpp  bsp.hpp  character_descr.hpp  close.hpp  colors.hpp  common_messages.hpp  common_text.hpp  config.hpp  create_character.hpp  debug.hpp  direction.hpp  disarm.hpp  dmg_range.hpp  draw_box.hpp  draw_map.hpp  drop.hpp  explosion.hpp  feature.hpp  (+101 more)
installed_files/: LICENSE-AUDIO.txt  LICENSE-FONTS.txt  README-AUDIO-FILES.txt  manual.txt  release_history.txt
installed_files/data/: monsters.xml
installed_files/data/colors/: colors.xml  colors_gui.xml
installed_files/data/map/: rooms.txt
installed_files/data/map/levels/: deep_one_lair.txt  egypt.txt  intro_forest.txt
installed_files/gfx/fonts/: 12x22_monospace_medium.png.backup
res/: manual.txt  release_history.txt
res/data/: colors_gui.xml  monsters.xml
res/data/map/: rooms.txt
res/data/map/levels/: deep_one_lair.txt  high_priest.txt  intro_forest.txt
rl_utils/include/: array2.hpp  direction.hpp  misc.hpp  pos.hpp  random.hpp  rect.hpp  rl_utils.hpp
rl_utils/src/: misc.cpp  random.cpp  rl_utils.cpp
src/: ability_values.cpp  actor.cpp  actor_act.cpp  actor_data.cpp  actor_death.cpp  actor_factory.cpp  actor_hit.cpp  actor_items.cpp  actor_mon.cpp  actor_move.cpp  actor_player.cpp  actor_see.cpp  actor_sneak.cpp  actor_start_turn.cpp  actor_std_turn.cpp  ai.cpp  attack.cpp  attack_data.cpp  audio.cpp  audio_data.cpp  bot.cpp  browser.cpp  bsp.cpp  character_descr.cpp  close.cpp  colors.cpp  common_messages.cpp  common_text.cpp  config.cpp  create_character.cpp  debug.cpp  direction.cpp  disarm.cpp  dmg_range.cpp  draw_box.cpp  draw_map.cpp  drop.cpp  explosion.cpp  feature.cpp  feature_data.cpp  (+116 more)
test/include/: test_utils.hpp
test/src/: main.cpp  stubs.cpp  test_2d_array.cpp  test_dir_utils.cpp  test_random.cpp  test_throw_items.cpp  test_utils.cpp
test/test_cases/src/: test_2d_array.cpp  test_attack_data.cpp  test_dir_utils.cpp  test_explosion.cpp  test_floodfill.cpp  test_fov.cpp  test_incinerator.cpp  test_inventory.cpp  test_item_curse.cpp  test_king_dist.cpp  test_knockback.cpp  test_light.cpp  test_line_calc.cpp  test_player_bon.cpp  test_properties.cpp  test_random.cpp  test_saving.cpp  test_sound.cpp  test_spells.cpp  test_text_formatting.cpp  test_throw_items.cpp  test_trap.cpp
tools/: prepend-source-license.sh
xml/tinyxml2/: tinyxml2.cpp
